<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/github">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/github_hot_repo"
                    android:icon="@drawable/ic_hot_repo"
                    android:title="@string/hot_repo"/>
                <item
                    android:id="@+id/github_hot_coder"
                    android:icon="@drawable/ic_hot_coder"
                    android:title="@string/hot_coder"/>
                <item
                    android:id="@+id/github_trend"
                    android:icon="@drawable/ic_trend"
                    android:title="@string/trend"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/arsenal">
        <menu>

            <group android:checkableBehavior="single">
            <item
                android:id="@+id/arsenal_my_repo"
                android:icon="@drawable/ic_my_repo"
                android:title="@string/my_repo"/>
            <item
                android:id="@+id/arsenal_recommend"
                android:icon="@drawable/ic_recommend"
                android:title="@string/recommend"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/tips_and_tricks">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/tips_daily"
                android:icon="@drawable/ic_tips"
                android:title="@string/tips_daily"/>
            <item
                android:id="@+id/tips_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
            </group>
        </menu>
    </item>

</menu>